--- a/src/app.module.css
+++ b/src/app.module.css
@@ -4,4 +4,11 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    padding: 0 2rem;
+}
+
+@media screen and (max-width: 500px) {
+    .main {
+        padding: 0 1rem;
+    }
 }
