--- a/src/components/TasksContainer.module.css
+++ b/src/components/TasksContainer.module.css
@@ -41,3 +41,9 @@
     flex-direction: column;
     gap: 0.75rem;
 }
+
+@media (max-width: 330px) {
+    .tasksQuantity > div {
+        flex-direction: column;
+    }
+}
