--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     gap: .75rem;
-    width: 87%;
+    width: 91%;
 }
 
 .checkboxDiv {
@@ -29,21 +29,23 @@
     z-index: 2;
 }
 
-.checkboxUnchecked {
-    background-color: var(--gray-600);
-    border: 2px solid var(--blue);
+.checkboxBtn {
     border-radius: 50%;
     width: 1rem;
     height: 1rem;
+    display: flex;
+    flex-shrink: 0;
+    cursor: pointer;
+}
+
+.checkboxUnchecked {
+    background-color: var(--gray-600);
+    border: 2px solid var(--blue);
 }
 
 .checkboxChecked {
     background-color: var(--purpleDark);
     border: 2px solid var(--purpleDark);
-    border-radius: 50%;
-    width: 1rem;
-    height: 1rem;
-    display: flex;
 }
 
 .labelChecked {
@@ -54,6 +56,8 @@
 label {
     line-height: 1.25rem;
     width: 100%;
+    word-wrap: break-word;
+    padding-right: 3rem;
 }
 
 .trashIcon {
@@ -61,6 +65,7 @@ label {
     color: var(--gray-200);
     cursor: pointer;
     transition: color .15s;
+    flex-shrink: 0;
 }
 
 .trashIcon:hover {
